--- a/WpfControl/MainWindow.xaml
+++ b/WpfControl/MainWindow.xaml
@@ -7,6 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <TabControl Margin="5">
+            <TabItem Header="button">
+                <local:ButtonView/>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
